Bonus: Conservar la base de datos y analizar la imagen

--- a/03-pokedex/docker-compose.prod.yaml
+++ b/03-pokedex/docker-compose.prod.yaml
@@ -29,4 +29,4 @@ services:
     environment:
       MONGODB_DATABASE: nest-pokemon
     # volumes:
-    #   - ./mongo:/data/db
+      - ./mongo:/data/db
