--- a/04-teslo-shop/package.json
+++ b/04-teslo-shop/package.json
@@ -40,6 +40,7 @@
     "pg": "^8.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.20",
     "uuid": "^10.0.0"
   },
